--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 title: Mohamed Baha Ben Ticha
-theme: Dinky
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
